[tool.poetry]
name = "wiever"
version = "0.1.0"
description = ""
authors = ["Alireza Arabi <me@alirezaarabi.com>"]
readme = "README.md"
packages = [
    { include = "wiever" }
]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.15.1"

[tool.poetry.scripts]
wiever = "wiever.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
