[tool.poetry]
name = "wiever"
version = "0.1.0"
description = "Wiever is a powerful and flexible CLI tool designed to provide detailed and customizable views of your directory structure. Whether you're looking to visualize your filesystem as a tree, generate detailed file listings, or explore other innovative views of your directories, Wiever has you covered."
license = "MIT"
authors = ["Alireza Arabi <me@alirezaarabi.com>"]
readme = "README.md"
repository = "https://github.com/python-poetry/poetry"
keywords = [
    "CLI",
    "tree view",
    "directory tree",
    "file explorer",
    "filesystem viewer",
    "directory listing",
    "command line tool",
    "file system",
    "hierarchical view",
    "Python CLI",
    "tool",
    "utilities",
    "directory visualization",
    "cross-platform",
    "filesystem navigation",
    "Typer",
    "Python tool",
]
packages = [{ include = "wiever" }]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.15.1"

[tool.poetry.scripts]
wiever = "wiever.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
